[PR-4]-Homepage Honeymoon Specials Update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/shared.css" />
   </head>
+
   <body>
-    
+    <div class="homepage">
+      <img src="images/Illustration.png" alt="Resim bulunamadı" />
+      <div class="text">
+        <h2><b>HONEYMOON SPECIALS</b></h2>
+        <h1>
+          Our Romantic Tropical <br />
+          Destinations
+        </h1>
+        <p>
+          Et labore harum non nobis ipsum eum molestias mollitia et corporis
+          <br />
+          praesentium a laudantium internos. Non quis eius quo eligendi corrupti
+          <br />
+          et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus
+          illum
+          <br />aut optio quibusdam!
+        </p>
+
+        <button>
+          <a href="https://www.google.com/"><strong>View Packages</strong></a>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
