[PR-4] - index.html and index.css has been changed

--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
   </head>
 
   <body>
-    <div class="homepage">
-      <img src="images/Illustration.png" alt="Resim bulunamadı" />
-      <div class="text">
-        <h2><b>HONEYMOON SPECIALS</b></h2>
-        <h1>
-          Our Romantic Tropical <br />
-          Destinations
-        </h1>
-        <p>
-          Et labore harum non nobis ipsum eum molestias mollitia et corporis
-          <br />
-          praesentium a laudantium internos. Non quis eius quo eligendi corrupti
-          <br />
-          et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus
-          illum
-          <br />aut optio quibusdam!
-        </p>
-
-        <button>
-          <a href="https://www.google.com/"><strong>View Packages</strong></a>
-        </button>
+    <div class="homepage-honeymoon-specials">
+      <div class="honeymoon-specials-container">
+        <div class="hs-image-box">
+          <img src="images/Illustration.png" alt="" class="hs-image" />
+        </div>
+        <div class="hs-title-box">
+          <h6 class="hs-subtitle">HONEYMOON SPECIALS</h6>
+          <h2 class="hs-title">
+            Our Romantic Tropical <br />
+            Destinations
+          </h2>
+          <p class="hs-paragraph">
+            Et labore harum non nobis ipsum eum molestias mollitia et corporis
+            <br />
+            praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti
+            <br />
+            et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus
+            illum
+            <br />aut optio quibusdam!
+          </p>
+          <div class="hs-button">
+            <button class="hs-text">
+              <a href="https://www.google.com/" target="_blank"
+                >View Packages</a
+              >
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
