index.html and index.css has been fixed

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             illum
             <br />aut optio quibusdam!
           </p>
-          <div class="hs-button">
-            <button class="hs-text">
+          <div>
+            <button class="hs-button">
               <a href="https://www.google.com/" target="_blank"
                 >View Packages</a
               >
