Update after pull request review

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            
           <div class="bs-cardbox"> 
             <div class="bs-card"> 
-              <div class="bs-image">
+              <div class="bs-image" style="position: relative; width: fit-content;margin: auto;">
                 <img src="images/homepage-services-human.png" alt="photo" />
                 <span class="images-span span-1"></span>
               </div>
