--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
 
   <body>
+    <!-- erkin honeymoon specials START-->
     <div class="homepage-honeymoon-specials">
       <div class="honeymoon-specials-container">
         <div class="hs-image-box">
@@ -52,5 +53,54 @@
         </div>
       </div>
     </div>
+    <!-- erkin honeymoon specials END-->
+    <!-- erkin explore section START-->
+    <div class="homepage-explore-section">
+      <div class="explore-section-container">
+        <div class="es-left-box">
+          <img
+            class="es-left-img"
+            src="images/homepage-explore1.png"
+            alt="resim-1"
+          />
+          <div class="es-left-tb">
+            <h6 class="es-sl">PROMOTION</h6>
+            <h2 class="es-tl">Explore Nature</h2>
+            <img
+              class="es-il"
+              src="images/explore-section-line-img01.png"
+              alt="signature"
+            />
+            <br />
+            <button class="es-bl">
+              <a href="https://www.google.com/" target="_blank"
+                >View Packages</a
+              >
+            </button>
+          </div>
+        </div>
+        <div class="es-right-box">
+          <img
+            class="es-right-img"
+            src="images/homepage-explore2.png"
+            alt="resim-2"
+          />
+          <div class="es-right-tb">
+            <h6 class="es-sr">PROMOTION</h6>
+            <h2 class="es-tr">Explore Cities</h2>
+            <img
+              class="es-ir"
+              src="images/explore-section-line-img02.png"
+              alt="signature"
+            />
+            <button class="es-br">
+              <a href="https://www.google.com/" target="_blank"
+                >View Packages</a
+              >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- erkin explore section END-->
   </body>
 </html>
