Homepage best services completed.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            
           <div class="bs-cardbox"> 
             <div class="bs-card"> 
-              <div class="bs-image" style="position: relative; width: fit-content;margin: auto;">
+              <div class="bs-image">
                 <img src="images/homepage-services-human.png" alt="photo" />
                 <span class="images-span span-1"></span>
               </div>
@@ -34,6 +34,7 @@
             <div class="bs-card-with-shadow"> 
               <div class="bs-image">
                 <img src="images/homepage-services-plane.png" alt="photo" /> 
+                <span class="images-span span-2"></span>
               </div>
               <p class="bs-card-title">Best Flights Options</p>
               <p class="bs-card-paragraph">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placeat.</p>
@@ -43,6 +44,7 @@
             <div class="bs-card"> 
               <div class="bs-image"> 
                 <img src="images/homepage-services-medical.png" alt="photo" /> 
+                <span class="images-span span-3"></span>
               </div>
              
               <p class="bs-card-title">Religious Tours</p>
@@ -51,6 +53,7 @@
             <div class="bs-card"> 
               <div class="bs-image">
                   <img src="images/homepage-services-hands.png" alt="photo" /> 
+                  <span class="images-span span-4"></span>
               </div>
               <p class="bs-card-title">Medical insurance</p>
               <p class="bs-card-paragraph">sunt qui repellat saepe<br> quo velit aperiam id<br> aliquam placeat.</p>
