[PR-8] - Added fonts and positions

--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
       <div class="explore-section-container">
         <div class="es-boxes">
           <img class="es-images" src="images/homepage-explore1.png" alt="" />
-          <div class="es-titles">
-            <div class="es-tb">
+          <div class="es-titles-boxes">
+            <div class="es-articles">
               <h6 class="es-subtitles">PROMOTION</h6>
-              <h2 class="es-tlr">Explore Nature</h2>
-              <img src="images/explore-section-line-img01.png" alt="" />
+              <h2 class="es-titles">Explore Nature</h2>
+              <div class="es-signatures">
+                <img
+                  class="es-simg"
+                  src="images/explore-section-line-img01.png"
+                  alt=""
+                />
+              </div>
             </div>
             <button class="es-buttons">
               <a href="https://www.google.com/" target="_blank"
@@ -74,11 +80,17 @@
         </div>
         <div class="es-boxes">
           <img class="es-images" src="images/homepage-explore2.png" alt="" />
-          <div class="es-titles">
-            <div class="es-tb">
+          <div class="es-titles-boxes">
+            <div class="es-articles">
               <h6 class="es-subtitles">PROMOTION</h6>
-              <h2 class="es-tlr">Explore Cities</h2>
-              <img src="images/explore-section-line-img02.png" alt="" />
+              <h2 class="es-titles">Explore Cities</h2>
+              <div class="es-signatures">
+                <img
+                  class="es-simg"
+                  src="images/explore-section-line-img02.png"
+                  alt=""
+                />
+              </div>
             </div>
             <button class="es-buttons">
               <a href="https://www.google.com/" target="_blank"
