--- a/index.html
+++ b/index.html
@@ -52,5 +52,56 @@
         </div>
       </div>
     </div>
+
+    <div class="homepage-favorite-resorts">
+      <div class="favorite-resorts-container">
+          <div class="fr-context">
+
+              <div class="fr-heading-box">
+                  <h6 class="subheading">Fast & Easy</h6>
+                  <h2 class="heading">Get Your Favorite </br> Resort Bookings</h2>
+              </div>
+
+              <div class="fr-script-box">
+
+                  <div class="whole-script">
+                      <div class="image"> 
+                          <img src="images/value-image-1.png" alt="Choose Destination">
+                      </div>
+                      <div class="script">
+                          <p class="title">Choose Destination</p>
+                          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur </br> adipiscing elit. Urna, tortor tempus. </p>
+                      </div>
+                  </div>
+
+                  <div class="whole-script">
+                      <div class="image">
+                          <img src="images/value-image-3.png" alt="Check Availability">
+                      </div>
+
+                      <div class="script">
+                          <h6 class="title">Check Availability</h6>
+                          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur </br> adipiscing elit. Urna, tortor tempus. </p>
+                      </div>
+                  </div>
+
+                  <div class="whole-script">
+                      <div class="image" >
+                          <img src="images/value-image-2.png" alt="Let's Go">
+                      </div>
+                     
+                      <div class="script">
+                          <h6 class="title">Let's Go</h6>
+                          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur </br> adipiscing elit. Urna, tortor tempus. </p>
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+              <div class="fr-illustration">
+                  <img class="illustration" src="images/book-trip-img.png" alt="Book Trip">
+              </div>
+          </div>
+
   </body>
 </html>
