First version of homepage tour package

--- a/index.html
+++ b/index.html
@@ -52,5 +52,49 @@
         </div>
       </div>
     </div>
+    <div class="homepage-tour-package-container">
+      <h5 class="tp-h5">TRENDY</h5>
+      <h2 class="tp-h2">Our Trending Tour Packages</h2>
+    </div>
+    <div class="homepage-tour-package-container-box">
+        <div class="tp-box">
+          <div class="tp-box-images"> 
+            <img class="tp-box-image" src="images/hometour-packages-switzerland.png" alt="isviçre image">
+            <img class="tp-box-flag" src="images/swiss-flag.png" alt="isviçre flag image">
+          </div>
+          <div class="tp-spans-box">
+            <span class="tp-box-spans">
+              <img src="images/hometour-packages-calender-icon.png" alt="calender icon">
+              <p>8 days</p>
+            </span>
+            <span class="tp-box-spans">
+              <img src="images/hometour-packages-user-icon.png" alt="user icon">
+              <p>25 People going</p>
+            </span>
+          </div>
+          <div class="tp-box-title">
+            <h4>Switzerland</h4>
+            <span class="tp-box-spans-star">
+              <img src="images/hometour-packages-star-img.png" alt="star icon">
+              <img src="images/hometour-packages-star-img.png" alt="star icon">
+              <img src="images/hometour-packages-star-img.png" alt="star icon">
+              <img src="images/hometour-packages-star-img.png" alt="star icon">
+              <img src="images/hometour-packages-star-img.png" alt="star icon">
+            </span>
+          </div>
+          <span class="tp-box-spans">
+            <img src="images/hometour-packages-location-icon.png" alt="location icon">
+            <p>Europe</p>
+          </span>
+          <div class="tp-box-pricings">
+            <h4>1,000 $</h4>
+            <h5>1,200 $</h5>
+          </div>
+          <p class="tp-box-p">Nam exercitationem commodi et ducimus quia in dolore<br>
+            animi sit mollitia amet id quod eligendi. Et labore harum<br> 
+            non nobis ipsum eum molestias mollitia et corporis<br>
+            praesentium a laudantium internos.</p>
+          <a class="tp-box-button" href="#">Explore Now</a>
+        </div>
   </body>
 </html>
