--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <!-- Esra Best Servicess Start-->
     <div class="homepage-best-services">
       <div class="homepage-best-services-container">
         <div class="bs-title-box">
@@ -78,5 +79,39 @@
         </div>
       </div>
     </div>
+    <!-- Esra Best Servicess END-->
+    <!-- Erkin Honeymoon Specials Start-->
+    <div class="homepage-honeymoon-specials">
+      <div class="honeymoon-specials-container">
+        <div class="hs-image-box">
+          <img src="images/Illustration.png" alt="" class="hs-image" />
+        </div>
+        <div class="hs-title-box">
+          <h6 class="hs-subtitle">HONEYMOON SPECIALS</h6>
+          <h2 class="hs-title">
+            Our Romantic Tropical <br />
+            Destinations
+          </h2>
+          <p class="hs-paragraph">
+            Et labore harum non nobis ipsum eum molestias mollitia et corporis
+            <br />
+            praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti
+            <br />
+            et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus
+            illum
+            <br />aut optio quibusdam!
+          </p>
+          <div>
+            <button class="hs-button">
+              <a href="https://www.google.com/" target="_blank"
+                >View Packages</a
+              >
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Erkin Honeymoon Specials End-->
   </body>
 </html>
