[PR-1] - Div structures completed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,44 @@
   </head>
 
   <body>
+    <!--Erkin Hero Section START-->
+    <div class="homepage-hero-section">
+      <div class="hero-section-container">
+        <div class="hes-top">
+          <div class="hes-navbar">
+            <div class="hes-nav-logo"></div>
+            <ul class="hes-nav-menu">
+              <li class="nb-menu-btn1"><a href="">Overwiev</a></li>
+              <li class="nb-menu-btn2"><a href="">Prices</a></li>
+              <li class="nb-menu-btn3"><a href="">Blog</a></li>
+              <li class="nb-menu-btn4"><a href="">Feedback</a></li>
+              <button class="nb-menu-btn5"><a href="">Purchase</a></button>
+            </ul>
+          </div>
+          <div class="hes-title-box">
+            <img src="" alt="" />
+            <h2></h2>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <button></button>
+            </ul>
+          </div>
+          <img src="images/scroll.png" alt="" />
+        </div>
+        <div class="hes-bottom">
+          <div class="hes-bottom-imgs">
+            <img class="hes-logo-1" src="images/partner-logo3.png" alt="" />
+            <img class="hes-logo-2" src="images/partners-logo5.png" alt="" />
+            <img class="hes-logo-3" src="images/partner-logo4.png" alt="" />
+            <img class="hes-logo-4" src="images/partner-logo1.png" alt="" />
+            <img class="hes-logo-5" src="images/partner-logo2.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Erkin Hero Section END-->
     <!-- Esra Best Servicess Start-->
     <div class="homepage-best-services">
       <div class="homepage-best-services-container">
