[PR-5] - Updates After First Pull Request on Using Specific Class Names and Changing Width to Max-Width

--- a/index.html
+++ b/index.html
@@ -57,46 +57,46 @@
       <div class="favorite-resorts-container">
         <div class="fr-context">
           <div class="fr-heading-box">
-            <h6 class="subheading">Fast & Easy</h6>
-            <h2 class="heading">Get Your Favorite Resort Bookings</h2>
+            <h6 class="hb-subheading">Fast & Easy</h6>
+            <h2 class="hb-heading">Get Your Favorite Resort Bookings</h2>
           </div>
 
           <div class="fr-script-box">
-            <div class="whole-script">
-              <div class="image">
+            <div class="sb-whole-script">
+              <div class="ws-image">
                 <img src="images/value-image-1.png" alt="Choose Destination" />
               </div>
-              <div class="script">
-                <h6 class="title">Choose Destination</h6>
-                <p class="paragraph">
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Choose Destination</h6>
+                <p class="ps-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
                   tortor tempus.
                 </p>
               </div>
             </div>
 
-            <div class="whole-script">
-              <div class="image">
+            <div class="sb-whole-script">
+              <div class="ws-image">
                 <img src="images/value-image-3.png" alt="Check Availability" />
               </div>
 
-              <div class="script">
-                <h6 class="title">Check Availability</h6>
-                <p class="paragraph">
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Check Availability</h6>
+                <p class="ps-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
                   tortor tempus.
                 </p>
               </div>
             </div>
 
-            <div class="whole-script">
-              <div class="image">
+            <div class="sb-whole-script">
+              <div class="ws-image">
                 <img src="images/value-image-2.png" alt="Let's Go" />
               </div>
 
-              <div class="script">
-                <h6 class="title">Let's Go</h6>
-                <p class="paragraph">
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Let's Go</h6>
+                <p class="ps-paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
                   tortor tempus.
                 </p>
@@ -106,11 +106,7 @@
         </div>
 
         <div class="fr-illustration">
-          <img
-            class="illustration"
-            src="images/book-trip-img.png"
-            alt="Book Trip"
-          />
+          <img class="illustration" src="images/book-trip-img.png" alt="Book Trip"/>
         </div>
       </div>
     </div>
