[PR-1] - images and hover added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -19,35 +19,36 @@
     <div class="homepage-hero-section">
       <div class="hero-section-container">
         <div class="hes-top">
-          <div class="hes-navbar">
-            <div class="hes-nav-logo"></div>
-            <ul class="hes-nav-menu">
-              <li class="nb-menu-btn1"><a href="">Overwiev</a></li>
-              <li class="nb-menu-btn2"><a href="">Prices</a></li>
-              <li class="nb-menu-btn3"><a href="">Blog</a></li>
-              <li class="nb-menu-btn4"><a href="">Feedback</a></li>
-              <button class="nb-menu-btn5"><a href="">Purchase</a></button>
-            </ul>
+          <div class="hes-header">
+            <img class="hes-header-logo" src="images/logo.png" alt="" />
+            <nav class="hes-navbar">
+              <a href="">Home</a>
+              <a href="">About</a>
+              <a href="">Services</a>
+              <a href="">Upcomming Packages</a>
+            </nav>
+            <button class="hes-button">Get in Touch</button>
           </div>
-          <div class="hes-title-box">
-            <img src="" alt="" />
-            <h2></h2>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <button></button>
-            </ul>
-          </div>
-          <img src="images/scroll.png" alt="" />
         </div>
         <div class="hes-bottom">
-          <div class="hes-bottom-imgs">
-            <img class="hes-logo-1" src="images/partner-logo3.png" alt="" />
-            <img class="hes-logo-2" src="images/partners-logo5.png" alt="" />
-            <img class="hes-logo-3" src="images/partner-logo4.png" alt="" />
-            <img class="hes-logo-4" src="images/partner-logo1.png" alt="" />
-            <img class="hes-logo-5" src="images/partner-logo2.png" alt="" />
+          <div class="hes-logos-container">
+            <img
+              class="hes-logo"
+              src="images/image 909.png"
+              alt="Fly Emirates"
+            />
+            <img
+              class="hes-logo"
+              src="images/partners-logo5.png"
+              alt="Trivago"
+            />
+            <img class="hes-logo" src="images/partner-logo4.png" alt="Airbnb" />
+            <img
+              class="hes-logo"
+              src="images/image 913.png"
+              alt="Turkish Airlines"
+            />
+            <img class="hes-logo" src="images/image 912.png" alt="Swiss" />
           </div>
         </div>
       </div>
