esra/PR-2-Homepage-Partners-Section updated

--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
   </head>
 
   <body>
+    <div class="homepage-partners-section">
+      <div class="homepage-partners-section-container">
+        <div class="ps-slide">
+          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
+        </div>
+        <div class="ps-slide">
+          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
+        </div>
+        <div class="ps-slide">
+          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
+        </div>
+        <div class="ps-slide">
+          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
+        </div>
+        <div class="ps-slide">
+          <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
+        </div>
+      </div>
+    </div>
     <!-- Esra Best Servicess Start-->
     <div class="homepage-best-services">
       <div class="homepage-best-services-container">
@@ -113,6 +132,69 @@
       </div>
     </div>
     <!-- Erkin Honeymoon Specials End-->
+    <!-- Muruvvet Favorite resorts Start-->
+    <div class="homepage-favorite-resorts">
+      <div class="favorite-resorts-container">
+        <div class="fr-context">
+          <div class="fr-heading-box">
+            <h6 class="hb-subheading">Fast & Easy</h6>
+            <h2 class="hb-heading">Get Your Favorite Resort Bookings</h2>
+          </div>
+
+          <div class="fr-script-box">
+            <div class="sb-whole-script">
+              <div class="ws-image">
+                <img src="images/value-image-1.png" alt="Choose Destination" />
+              </div>
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Choose Destination</h6>
+                <p class="ps-paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+
+            <div class="sb-whole-script">
+              <div class="ws-image">
+                <img src="images/value-image-3.png" alt="Check Availability" />
+              </div>
+
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Check Availability</h6>
+                <p class="ps-paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+
+            <div class="sb-whole-script">
+              <div class="ws-image">
+                <img src="images/value-image-2.png" alt="Let's Go" />
+              </div>
+
+              <div class="sb-partial-script">
+                <h6 class="ps-title">Let's Go</h6>
+                <p class="ps-paragraph">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna,
+                  tortor tempus.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="fr-illustration">
+          <img
+            class="illustration"
+            src="images/book-trip-img.png"
+            alt="Book Trip"
+          />
+        </div>
+      </div>
+    </div>
+    <!-- Muruvvet Favorite resorts END-->
     <!-- erkin explore section START-->
     <div class="homepage-explore-section">
       <div class="explore-section-container">
