--- a/index.html
+++ b/index.html
@@ -17,21 +17,18 @@
   <body>
     <div class="homepage-partners-section">
       <div class="homepage-partners-section-container">
-        <div class="ps-slide">
-          <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
-        </div>
-        <div class="ps-slide">
-          <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
-        </div>
-        <div class="ps-slide">
-          <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
-        </div>
-        <div class="ps-slide">
-          <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
-        </div>
-        <div class="ps-slide">
-          <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
-        </div>
+        <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
+        <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
+      </div>
+      <div class="homepage-partners-section-container">
+        <img src="./images/partner-logo1.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo2.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo3.png" alt="" class="ps-slide-image">
+        <img src="./images/partner-logo4.png" alt="" class="ps-slide-image">
+        <img src="./images/partners-logo5.png" alt="" class="ps-slide-image">
       </div>
     </div>
     <!-- Esra Best Servicess Start-->
