[PR - 10] - Basic Outline Starts Without Further Details

--- a/index.html
+++ b/index.html
@@ -224,5 +224,64 @@
       </div>
     </div>
     <!-- erkin explore section END-->
+
+    <!-- Muruvvet Testimonials Start-->
+      <div class="homepage-testimonials">
+        <div class="testimonials-container">
+          <div class="tc-testimonial-section">
+            <div class="ts-title-box">
+              <div class="tb-subheading">
+                <h4>PROMOTION</h4>
+              </div>
+              <div class="tb-heading">
+                <h4>See What Our Clients Say About Us</h4>
+              </div>
+            </div>
+              <div class="ts-script-box">
+                <div class="sb-left-arrow">
+                    <img src="images/arrow-leeft-icon.png" al0t="Left Arrow">
+                </div>
+
+                <div class="sb-script-without-arrows">
+                  <div class="swa-designer-image">
+                    <img src="images/testimonial-section-box-pp-img.png" alt="Designer Photo">
+                  </div>
+
+                  <div class="swa-double-quotes">
+                    <img src="images/testimonial-box-quotes.png" alt="Double Quotes">
+                  </div>
+    
+                  <div class="swa-paragraph">
+                    <p>Vel officiis dolor ea illo aut eligendi ullam non laudantium 
+                      magnam et recusandae molestiae sit iure unde aut 
+                      voluptate quaerat. Id sunt provident quo possimus 
+                      impedit vel doloremque obcaecati qui ullam consectetur 
+                      et ipsum omnis.
+                    </p>
+                  </div>
+
+                  <div class="swa-small-quotes">
+                    <img src="images/Vector-double-quotes.png" alt="Double Quotes">
+                  </div>
+    
+                  <div class="swa-footer">
+                    <p>Christine Beckam - Designer</p>
+                  </div>
+                </div>
+
+                <div class="sb-right-arrow">
+                  <img src="images/arrow-right-icon.png" alt="Right Arrow">
+                </div>
+              </div>
+          </div>
+
+          <div class="tc-pagination">
+            <img src="images/Pagination.png" alt="Pagination">
+          </div>
+
+        </div>
+      </div>
+    <!-- Muruvvet Testimonials End-->
+
   </body>
 </html>
