--- a/index.html
+++ b/index.html
@@ -239,13 +239,15 @@
             </div>
               <div class="ts-script-box">
 
-                <div class="sb-designer-image">
-                  <img src="images/testimonial-section-box-pp-img.png" alt="Designer Photo">
-                </div>
+                <img class="sb-designer-image" src="images/testimonial-section-box-pp-img.png" alt="Designer Photo">
 
-                <div class="sb-double-quotes">
+                <!-- <div class="sb-designer-image">
+                  <img src="images/testimonial-section-box-pp-img.png" alt="Designer Photo">
+                </div> -->
+
+                <!-- <div class="sb-double-quotes">
                   <img src="images/testimonial-box-quotes.png" alt="Double Quotes">
-                </div>
+                </div> -->
   
                 <div class="sb-writing-box">
                   <p class="wb-paragraph">Vel officiis dolor ea illo aut eligendi ullam non laudantium 
@@ -255,11 +257,13 @@
                     et ipsum omnis.
                   </p>
                   <p class="wb-footer">Christine Beckam - Designer</p>
+                  <img class="wb-double-quotes" src="images/testimonial-box-quotes.png" alt="Double Quotes">
+                  <img class="wb-small-quotes" src="images/Vector-double-quotes.png" alt="Double Quotes">
                 </div>
 
-                <div class="sb-small-quotes">
+                <!-- <div class="sb-small-quotes">
                   <img src="images/Vector-double-quotes.png" alt="Double Quotes">
-                </div>
+                </div> -->
 
                 <div class="sb-left-arrow">
                   <img src="images/arrow-leeft-icon.png" al0t="Left Arrow">
@@ -274,12 +278,10 @@
           <div class="tc-pagination">
             <img src="images/Pagination.png" alt="Pagination">
           </div>
-          
+        </div> 
           <img class="tc-hat-image" src="images/testimonial-section-hat-img.png" alt="Hat Image">
           <img class="tc-seashell-image" src="images/testimonial-section-seashell-img.png" alt="Seashell Image">
           <img class="tc-place-image" src="images/testimonial-section-photo-img.png" alt="Place Image">
-          
-        </div>
       </div>
     <!-- Muruvvet Testimonials End-->
 
